[package]
name = "haadi"
version = "0.1.0"
edition = "2024"
description = "Conservative JS/TS dead code analyzer for unused files, assets, dependencies, and exports"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/haadi"
keywords = ["javascript", "typescript", "cli", "static-analysis", "dead-code"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
once_cell = "1"
ratatui = "0.28"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
